# Terminal-Character-Sheet

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  char_state.json  eenie.py  example_character.py  featherwise.py  laucian.py  main.py  pyproject.toml  runin.py  sheet_variables.py
TerminalCharacterSheet/: CharacterSheet.py  __init__.py  character_sheet.py  logger.py  sheet_variables.py  terminal_character_sheet.py  tooltips.yaml  utils.py
TerminalCharacterSheet/modules/acrobatics/: module.art  module.info
TerminalCharacterSheet/modules/animal_handling/: module.art  module.info
TerminalCharacterSheet/modules/arcana/: module.art  module.info
TerminalCharacterSheet/modules/armour_class/: module.art  module.info
TerminalCharacterSheet/modules/athletics/: module.art  module.info
TerminalCharacterSheet/modules/attack_roll/: module.art  module.info
TerminalCharacterSheet/modules/banner/: module.art  module.info
TerminalCharacterSheet/modules/casting/: module.art  module.info
TerminalCharacterSheet/modules/character_class/: module.info
TerminalCharacterSheet/modules/character_name/: module.info
TerminalCharacterSheet/modules/charisma/: module.art  module.info
TerminalCharacterSheet/modules/charisma_saving_throw/: module.art  module.info
TerminalCharacterSheet/modules/class/: module.info
TerminalCharacterSheet/modules/coin_pouch/: module.art  module.info
TerminalCharacterSheet/modules/combat_stats/: module.art  module.info
TerminalCharacterSheet/modules/con_saving_throw/: module.info
characters/Corrin Tosscobble/: corrin.py
characters/Professor Featherwise/: featherwise.py
characters/featherwise/: featherwise.py
docs/source/: conf.py  index.rst
example_characters/: example_character.py  example_character_builder.py
example_characters/config_driven_character/: character_inventory.yml  character_stats.yml  example_character.py
terminal_character_sheet/: __init__.py  actions.py  character.py  character_sheet.py  display.py  display_module.py  input_handler.py  inventory.py  logger.py  screen.py  traits.py
tests/: __init__.py  test_character.py  test_character__refactor.py  test_context.py  test_display.py  test_display_module.py  test_init.py  test_logger.py  test_package.py  test_screen.py  tests.py
tests/characters/: example_character.py
(+153 files in other folders)
