[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "terminal-character-sheet"
version = "0.1.0-pre"
description = "Programmable ASCII Character Sheet"
authors = ["Frankie Homewood <F.Homewood@outlook.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "terminal_character_sheet"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9"
pytest = "*"
numpy = "*"
windows-curses = {version = "*", platform = "win32"}

[tool.poetry.urls]
"Homepage" = "https://github.com/FHomewood/Terminal-Character-Sheet"
"Bug Tracker" = "https://github.com/FHomewood/Terminal-Character-Sheet/issues"
